--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                <i class="bi bi-person-circle me-1"></i> <p>Hekkadka</p>&nbsp;
+                <i class="bi bi-person-circle me-1"></i> <span id="hide">Hekkadka</span>&nbsp;
                 <i class="fa-solid fa-chevron-down" style="font-size: 12px"></i>
               </button>
               <ul
@@ -124,21 +124,21 @@
             </div>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-dark fw-semibold" href="#">
+            <a class="nav-link text-dark fw-semibold " href="#">
               <button class="bg-white position-relative">
                 <i class="bi bi-cart3 me-1"></i>
                 <span
-                  class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                  class="position-absolute top-0 start-90 translate-middle badge rounded-pill bg-danger"
                 >
                   4
                 </span>
               </button>
-              <p>Cart</p>
+              <span id="hide">Cart</span>
             </a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link text-dark fw-semibold" href="#">
-              <i class="bi bi-briefcase me-1"></i> <p>Become a Seller</p>
+            <a class="nav-link text-dark fw-semibold " href="#">
+              <i class="bi bi-briefcase me-1"></i> <span id="hide">Become a Seller</span>
             </a>
           </li>
           <li>
@@ -197,7 +197,7 @@
           </div>
         </form>
 
-    <div id="top" class="d-flex overflow-auto bg-white p-3 m-3">
+    <div id="top" class="d-flex overflow-auto bg-white m-3">
       <span class="d-flex flex-column align-items-center"
         ><img
           src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/e00302d428f5c7be.png?q=100"
