--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-white shadow-sm py-2">
+    <nav class="navbar navbar-expand-lg bg-white shadow-sm ">
       <div
         class="container-fluid d-flex justify-content-around align-items-center"
       >
